src/models/grammar.txt
start : expr EOF

expr : operator
     | group

group : LBRACKET expr RBRACKET

operator : operator_term ((PLUS | MINUS) operator)?

operator_term : operator_mod ( ((MULTIPLY | DIVIDE) operator_term) | number )?

operator_mod : number ( MODULUS operator_mod )?

number : NUMBER
       | UNI_OP
       | variable
       | keyword
       | symbol

variable : VARIABLE

symbol : ( ALPHA | BETA | GAMMA | DELTA ... )

keyword : KEYWORD
        | fraction
        | function

fraction : FRAC group group

function : ( SIN | COS | TAN | LOG ... ) group
